[package]
name = "caps2esc-hjkl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [source.crates-io]
# registry = "git://github.com/rust-lang/crates.io-index.git"

[dependencies]
evdev = { git="https://github.com/emberian/evdev.git"}
libc = "0.2.144"
nix = "0.26.2"
