[package]
name = "caps2esc-hjkl-arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [source.crates-io]
# registry = "git://github.com/rust-lang/crates.io-index.git"

[dependencies]
interception-rs = { git="https://github.com/akarsh1995/interception-rs", rev="e5ed82f" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
